--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
-<h1>Checks Happy is coming soon...</h1>
+
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Checks Happy</title>
+            <style>
+                body {
+                    font-family: Arial, sans-serif;
+                    background-color: #f4f4f4;
+                    text-align: center;
+                    padding: 50px;
+                }
+                .container {
+                    max-width: 600px;
+                    margin: auto;
+                    background: white;
+                    padding: 20px;
+                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                    border-radius: 10px;
+                }
+                h1 {
+                    color: #333;
+                }
+                .new-project {
+                    display: block;
+                    width: 100%;
+                    background-color: #007BFF;
+                    color: white;
+                    border: none;
+                    padding: 15px;
+                    font-size: 16px;
+                    margin-top: 20px;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    text-decoration: none;
+                }
+                .new-project:hover {
+                    background-color: #0056b3;
+                }
+                .projects-grid {
+                    display: grid;
+                    grid-template-columns: repeat(3, 1fr);
+                    gap: 10px;
+                    margin-top: 20px;
+                }
+                .project-card {
+                    background: #ffffff;
+                    padding: 15px;
+                    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+                    border-radius: 5px;
+                }
+            </style>
+        </head>
+        <body>
+            <div class="container">
+                <h1>Welcome to Checks Happy</h1>
+                <a href="#" class="new-project">+ New Project</a>
+                <div class="projects-grid">
+                    <div class="project-card">Project 1</div>
+                    <div class="project-card">Project 2</div>
+                    <div class="project-card">Project 3</div>
+                    <div class="project-card">Project 4</div>
+                    <div class="project-card">Project 5</div>
+                    <div class="project-card">Project 6</div>
+                </div>
+            </div>
+        </body>
+        </html>
+        
