--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checks Happy</title>
     <style>
-        /* General Styles */
+        /* General Styling */
         body {
             font-family: 'Lexend', sans-serif;
-            background-color: #f4f4f4;
+            background-color: #f8f9fa;
             text-align: center;
             padding: 50px;
         }
@@ -17,23 +17,26 @@
             margin: auto;
             background: white;
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
             position: relative;
         }
         h1 {
             color: #333;
+            font-weight: 600;
         }
+
+        /* Upload Button */
         .upload-btn {
             background-color: #28a745;
             color: white;
             border: none;
-            padding: 15px;
-            font-size: 16px;
-            margin-top: 10px;
+            padding: 12px 20px;
+            font-size: 14px;
             border-radius: 5px;
             cursor: pointer;
             text-decoration: none;
+            transition: 0.3s;
         }
         .upload-btn:hover {
             background-color: #218838;
@@ -45,62 +48,74 @@
         input[type="file"] {
             display: none;
         }
+
+        /* Project Grid */
         .projects-grid {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 10px;
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+            gap: 15px;
             margin-top: 20px;
         }
         .project-card {
-            background: #ffffff;
-            padding: 15px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-        }
-        .actions {
-            margin-top: 10px;
-        }
-        .actions button {
-            cursor: pointer;
-            margin: 5px;
-            padding: 8px;
-            border-radius: 5px;
-            border: none;
-            font-size: 12px;
-        }
-        .rename-btn { background-color: #ffc107; color: white; }
-        .delete-btn { background-color: #dc3545; color: white; }
-        .update-btn { background-color: #17a2b8; color: white; }
-        .edit-btn { background-color: #007bff; color: white; }
-
-        /* Drag-and-Drop Styling */
-        .container.dragging {
-            border: 2px dashed #218838;
-            background-color: #eef7ee;
-        }
-
-        /* Modal Styles */
-        .modal {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             background: white;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
-            width: 300px;
-            text-align: center;
+            padding: 15px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            text-align: left;
+            position: relative;
+            transition: 0.3s;
         }
-        .modal input {
-            width: 80%;
-            padding: 10px;
-            margin-top: 10px;
+        .project-card:hover {
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
         }
-        .modal button {
-            margin-top: 10px;
+        .project-title {
+            font-weight: 600;
+            font-size: 14px;
+            color: #333;
+            margin-bottom: 5px;
+        }
+        .project-date {
+            font-size: 12px;
+            color: #777;
+        }
+
+        /* Dropdown Menu */
+        .dropdown {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+        .dropbtn {
+            background: none;
+            border: none;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            right: 0;
+            background: white;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+            width: 120px;
+            z-index: 100;
+        }
+        .dropdown-content button {
+            width: 100%;
             padding: 8px;
+            border: none;
+            text-align: left;
+            background: white;
+            font-size: 12px;
+            cursor: pointer;
+            transition: 0.2s;
+        }
+        .dropdown-content button:hover {
+            background: #f1f1f1;
+        }
+        .dropdown:hover .dropdown-content {
+            display: block;
         }
     </style>
 </head>
@@ -112,40 +127,11 @@
         <div class="projects-grid" id="projects-grid"></div>
     </div>
 
-    <!-- Edit Modal -->
-    <div id="edit-modal" class="modal">
-        <h3>Edit Project</h3>
-        <input type="text" id="edit-project-name" placeholder="New Project Name">
-        <button onclick="saveProjectEdit()">Save</button>
-        <button onclick="closeModal()">Cancel</button>
-    </div>
-
     <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            loadProjects();
-            setupDragAndDrop();
-        });
-
-        function setupDragAndDrop() {
-            const container = document.querySelector(".container");
-            container.addEventListener("dragover", (event) => {
-                event.preventDefault();
-                container.classList.add("dragging");
-            });
-            container.addEventListener("dragleave", () => {
-                container.classList.remove("dragging");
-            });
-            container.addEventListener("drop", handleDrop);
-        }
+        document.addEventListener("DOMContentLoaded", loadProjects);
 
         function handleFileUpload(event) {
             const file = event.target.files[0];
-            if (file) saveProject(file.name);
-        }
-
-        function handleDrop(event) {
-            event.preventDefault();
-            const file = event.dataTransfer.files[0];
             if (file) saveProject(file.name);
         }
 
@@ -173,12 +159,16 @@
             projects.forEach((project, index) => {
                 const projectCard = document.createElement("div");
                 projectCard.classList.add("project-card");
-                projectCard.innerHTML = `<strong>${project.name}</strong><br><small>${project.date}</small> 
-                    <div class="actions">
-                        <button class="rename-btn" onclick="renameProject(${index})">Rename</button>
-                        <button class="update-btn" onclick="updateScript(${index})">Update Script</button>
-                        <button class="edit-btn" onclick="openEditModal(${index})">Edit</button>
-                        <button class="delete-btn" onclick="deleteProject(${index})">Delete</button>
+                projectCard.innerHTML = `
+                    <div class="project-title">${project.name}</div>
+                    <div class="project-date">${project.date}</div>
+                    <div class="dropdown">
+                        <button class="dropbtn">⋮</button>
+                        <div class="dropdown-content">
+                            <button onclick="renameProject(${index})">Rename</button>
+                            <button onclick="updateScript(${index})">Update Script</button>
+                            <button onclick="deleteProject(${index})">Delete</button>
+                        </div>
                     </div>`;
                 projectsGrid.appendChild(projectCard);
             });
@@ -205,21 +195,6 @@
                 }
             };
             document.getElementById("file-input").click();
-        }
-
-        function openEditModal(index) {
-            document.getElementById("edit-modal").style.display = "block";
-            document.getElementById("edit-project-name").dataset.index = index;
-        }
-
-        function saveProjectEdit() {
-            let index = document.getElementById("edit-project-name").dataset.index;
-            renameProject(index);
-            closeModal();
-        }
-
-        function closeModal() {
-            document.getElementById("edit-modal").style.display = "none";
         }
 
         function deleteProject(index) {
