--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
             font-size: 14px;
             border-radius: 5px;
             cursor: pointer;
-            text-decoration: none;
             transition: 0.3s;
         }
         .upload-btn:hover {
@@ -61,22 +60,32 @@
             padding: 15px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            text-align: left;
             position: relative;
             transition: 0.3s;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
         .project-card:hover {
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
         }
+        
+        /* Project Name (Ellipsis for Long Text) */
         .project-title {
             font-weight: 600;
             font-size: 14px;
             color: #333;
-            margin-bottom: 5px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 140px;
+            display: inline-block;
+            vertical-align: middle;
         }
         .project-date {
             font-size: 12px;
             color: #777;
+            margin-top: 4px;
         }
 
         /* Dropdown Menu */
@@ -116,6 +125,13 @@
         }
         .dropdown:hover .dropdown-content {
             display: block;
+        }
+
+        /* Icon Styling */
+        .edit-icon {
+            font-size: 16px;
+            color: #007bff;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -160,16 +176,20 @@
                 const projectCard = document.createElement("div");
                 projectCard.classList.add("project-card");
                 projectCard.innerHTML = `
-                    <div class="project-title">${project.name}</div>
-                    <div class="project-date">${project.date}</div>
-                    <div class="dropdown">
-                        <button class="dropbtn">⋮</button>
-                        <div class="dropdown-content">
-                            <button onclick="renameProject(${index})">Rename</button>
-                            <button onclick="updateScript(${index})">Update Script</button>
-                            <button onclick="deleteProject(${index})">Delete</button>
+                    <div>
+                        <span class="project-title" title="${project.name}">${project.name}</span>
+                        <div class="dropdown">
+                            <button class="dropbtn">
+                                <span class="edit-icon">✏️</span>
+                            </button>
+                            <div class="dropdown-content">
+                                <button onclick="renameProject(${index})">Rename</button>
+                                <button onclick="updateScript(${index})">Update Script</button>
+                                <button onclick="deleteProject(${index})">Delete</button>
+                            </div>
                         </div>
-                    </div>`;
+                    </div>
+                    <div class="project-date">${project.date}</div>`;
                 projectsGrid.appendChild(projectCard);
             });
         }
