--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
         }
         
-        /* Project Name (Ellipsis for Long Text) */
+        /* Project Name */
+        .project-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
         .project-title {
             font-weight: 600;
             font-size: 14px;
@@ -79,8 +84,6 @@
             overflow: hidden;
             text-overflow: ellipsis;
             max-width: 140px;
-            display: inline-block;
-            vertical-align: middle;
         }
         .project-date {
             font-size: 12px;
@@ -90,15 +93,15 @@
 
         /* Dropdown Menu */
         .dropdown {
-            position: absolute;
-            top: 10px;
-            right: 10px;
+            position: relative;
+            display: inline-block;
         }
         .dropbtn {
             background: none;
             border: none;
-            font-size: 16px;
+            font-size: 18px;
             cursor: pointer;
+            color: #555;
         }
         .dropdown-content {
             display: none;
@@ -107,12 +110,15 @@
             background: white;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             border-radius: 5px;
-            width: 120px;
+            width: 140px;
             z-index: 100;
+            opacity: 0;
+            transform: translateY(-10px);
+            transition: opacity 0.2s ease, transform 0.2s ease;
         }
         .dropdown-content button {
             width: 100%;
-            padding: 8px;
+            padding: 10px;
             border: none;
             text-align: left;
             background: white;
@@ -123,15 +129,10 @@
         .dropdown-content button:hover {
             background: #f1f1f1;
         }
-        .dropdown:hover .dropdown-content {
+        .dropdown.active .dropdown-content {
             display: block;
-        }
-
-        /* Icon Styling */
-        .edit-icon {
-            font-size: 16px;
-            color: #007bff;
-            cursor: pointer;
+            opacity: 1;
+            transform: translateY(0);
         }
     </style>
 </head>
@@ -144,7 +145,10 @@
     </div>
 
     <script>
-        document.addEventListener("DOMContentLoaded", loadProjects);
+        document.addEventListener("DOMContentLoaded", () => {
+            loadProjects();
+            document.addEventListener("click", closeAllDropdowns);
+        });
 
         function handleFileUpload(event) {
             const file = event.target.files[0];
@@ -155,7 +159,6 @@
             if (!fileName.trim()) return alert("Invalid file name.");
             let projects = JSON.parse(localStorage.getItem("projects")) || [];
 
-            // Prevent duplicate uploads
             if (projects.some(project => project.name === fileName)) {
                 return alert("This file is already uploaded.");
             }
@@ -176,12 +179,10 @@
                 const projectCard = document.createElement("div");
                 projectCard.classList.add("project-card");
                 projectCard.innerHTML = `
-                    <div>
+                    <div class="project-header">
                         <span class="project-title" title="${project.name}">${project.name}</span>
                         <div class="dropdown">
-                            <button class="dropbtn">
-                                <span class="edit-icon">✏️</span>
-                            </button>
+                            <button class="dropbtn" onclick="toggleDropdown(event, this)">⋯</button>
                             <div class="dropdown-content">
                                 <button onclick="renameProject(${index})">Rename</button>
                                 <button onclick="updateScript(${index})">Update Script</button>
@@ -222,6 +223,16 @@
             projects.splice(index, 1);
             localStorage.setItem("projects", JSON.stringify(projects));
             loadProjects();
+        }
+
+        function toggleDropdown(event, btn) {
+            event.stopPropagation();
+            closeAllDropdowns();
+            btn.parentElement.classList.toggle("active");
+        }
+
+        function closeAllDropdowns() {
+            document.querySelectorAll(".dropdown").forEach(drop => drop.classList.remove("active"));
         }
     </script>
 </body>
