--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Dashboard</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
     <script defer src="script.js"></script>
 </head>
 <body>
@@ -14,15 +13,19 @@
         <h1 id="project-title">Project Dashboard</h1>
         <p id="project-date"></p>
 
-        <div class="dashboard-widgets">
-            <div class="widget" id="script-breakdown">📜 Script Breakdown</div>
-            <div class="widget" id="budgeting">💰 Budgeting</div>
-            <div class="widget" id="character-breakdown">🎭 Character Breakdown</div>
-            <div class="widget" id="lookbooks">📸 Look Books</div>
-            <div class="widget" id="continuity-tracker">🔄 Continuity Tracker</div>
-            <div class="widget" id="overtime-tracker">⏳ Overtime Tracker</div>
-            <div class="widget" id="schedule">📅 Schedule</div>
+        <!-- Widget Menu -->
+        <button class="menu-btn" onclick="toggleMenu()">+ Add Widget</button>
+        <div class="widget-menu" id="widget-menu">
+            <button onclick="addWidget('script-breakdown')">📜 Script Breakdown</button>
+            <button onclick="addWidget('budgeting')">💰 Budgeting</button>
+            <button onclick="addWidget('character-breakdown')">🎭 Character Breakdown</button>
+            <button onclick="addWidget('lookbooks')">📸 Look Books</button>
+            <button onclick="addWidget('continuity-tracker')">🔄 Continuity Tracker</button>
+            <button onclick="addWidget('overtime-tracker')">⏳ Overtime Tracker</button>
+            <button onclick="addWidget('schedule')">📅 Schedule</button>
         </div>
+
+        <div class="dashboard-widgets" id="dashboard-widgets"></div>
     </div>
 </body>
 </html>
