--- a/index.html
+++ b/index.html
@@ -153,7 +153,10 @@
 
         function handleFileUpload(event) {
             const file = event.target.files[0];
-            if (file) saveProject(file.name);
+            if (file) {
+                saveProject(file.name);
+                event.target.value = ""; // Reset file input to allow re-upload
+            }
         }
 
         function saveProject(fileName) {
@@ -179,7 +182,7 @@
             projects.forEach((project, index) => {
                 const projectCard = document.createElement("div");
                 projectCard.classList.add("project-card");
-                projectCard.onclick = () => openDashboard(project.name); // Make it clickable
+                projectCard.onclick = () => openDashboard(project.name); // Navigate to dashboard
 
                 projectCard.innerHTML = `
                     <div class="project-header">
@@ -221,6 +224,7 @@
                     projects[index].name = file.name;
                     localStorage.setItem("projects", JSON.stringify(projects));
                     loadProjects();
+                    event.target.value = ""; // Reset file input
                 }
             };
             document.getElementById("file-input").click();
