--- a/dashboard.html
+++ b/dashboard.html
@@ -1,88 +1,25 @@
-/* iPad-Style Look */
-body {
-    font-family: 'Lexend', sans-serif;
-    background: linear-gradient(135deg, #dfe9f3, #ffffff);
-    text-align: center;
-    padding: 20px;
-    overflow: hidden;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="dashboard-container">
+        <h1>Dashboard</h1>
+        <button class="menu-btn" onclick="toggleMenu()">➕ Add Widget</button>
+        <div id="widget-menu" class="widget-menu">
+            <button onclick="addWidget('script-breakdown')">Script Breakdown</button>
+            <button onclick="addWidget('budgeting')">Budgeting</button>
+            <button onclick="addWidget('character-breakdown')">Character Breakdown</button>
+            <button onclick="addWidget('schedule')">Schedule</button>
+            <button onclick="addWidget('lookbook')">Look Book</button>
+        </div>
+        <div class="dashboard-widgets" id="dashboard-widgets"></div>
+    </div>
 
-/* Dashboard Layout */
-.dashboard-container {
-    max-width: 1000px;
-    margin: auto;
-    padding: 20px;
-    text-align: center;
-    position: relative;
-}
-
-/* Grid Layout for Widgets */
-.dashboard-widgets {
-    display: grid;
-    grid-template-columns: repeat(3, 220px); /* 3 columns */
-    grid-auto-rows: 220px;
-    gap: 10px;
-    justify-content: center;
-    position: relative;
-}
-
-/* Widget Base */
-.widget {
-    width: 200px;
-    height: 150px;
-    background: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(10px);
-    border-radius: 20px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: grab;
-    user-select: none;
-    transition: all 0.3s ease;
-    position: absolute;
-}
-
-/* Widget Delete Button */
-.widget .delete-btn {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    background: red;
-    color: white;
-    border: none;
-    padding: 5px;
-    font-size: 12px;
-    border-radius: 50%;
-    cursor: pointer;
-    opacity: 0.8;
-}
-
-.widget .delete-btn:hover {
-    opacity: 1;
-}
-
-/* Floating Menu */
-.menu-btn {
-    background: #007bff;
-    color: white;
-    border: none;
-    padding: 10px;
-    font-size: 14px;
-    cursor: pointer;
-    border-radius: 10px;
-    margin-bottom: 10px;
-}
-
-.widget-menu {
-    display: none;
-    position: absolute;
-    background: white;
-    border: 1px solid #ddd;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    padding: 10px;
-    z-index: 10;
-}
+    <script src="script.js"></script>
+</body>
+</html>
